--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "jsonfile": "^2.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.1.1"
   }
 }
